force-app/main/default/objects/PMHR_PokemonData__c/PMHR_PokemonData__c.object-meta.xml
<CustomObject>
    <label>Pokemon Data</label>
    <nameField>
        <label>Form</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pokemons Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>