force-app/main/default/objects/PMHR_PokemonData__c/fields/EvolvesFromVariant__c.field-meta.xml
<CustomField>
    <fullName>EvolvesFromVariant__c</fullName>
    <description>Locks evolving into the form for region specific variants - pokemon region specific variant must correspond with provided value.</description>
    <label>Evolves from Variant</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMHR_PokemonRegionalVariant</valueSetName>
    </valueSet>
</CustomField>