force-app/main/default/objects/PMHR_PokemonData__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abra</fullName>
            </value>
            <value>
                <fullName>Absol</fullName>
            </value>
            <value>
                <fullName>Aerodactyl</fullName>
            </value>
            <value>
                <fullName>Aipom</fullName>
            </value>
            <value>
                <fullName>Alomomola</fullName>
            </value>
            <value>
                <fullName>Amaura</fullName>
            </value>
            <value>
                <fullName>Anorith</fullName>
            </value>
            <value>
                <fullName>Applin</fullName>
            </value>
            <value>
                <fullName>Arceus</fullName>
            </value>
            <value>
                <fullName>Archen</fullName>
            </value>
            <value>
                <fullName>Arctovish</fullName>
            </value>
            <value>
                <fullName>Arctozolt</fullName>
            </value>
            <value>
                <fullName>Aron</fullName>
            </value>
            <value>
                <fullName>Arrokuda</fullName>
            </value>
            <value>
                <fullName>Articuno</fullName>
            </value>
            <value>
                <fullName>Audino</fullName>
            </value>
            <value>
                <fullName>Axew</fullName>
            </value>
            <value>
                <fullName>Azelf</fullName>
            </value>
            <value>
                <fullName>Azurill</fullName>
            </value>
            <value>
                <fullName>Bagon</fullName>
            </value>
            <value>
                <fullName>Baltoy</fullName>
            </value>
            <value>
                <fullName>Barboach</fullName>
            </value>
            <value>
                <fullName>Basculin</fullName>
            </value>
            <value>
                <fullName>Beldum</fullName>
            </value>
            <value>
                <fullName>Bellsprout</fullName>
            </value>
            <value>
                <fullName>Bergmite</fullName>
            </value>
            <value>
                <fullName>Bidoof</fullName>
            </value>
            <value>
                <fullName>Binacle</fullName>
            </value>
            <value>
                <fullName>Blacephalon</fullName>
            </value>
            <value>
                <fullName>Blipbug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>