force-app/main/default/objects/PMHR_PokemonData__c/fields/FamilyStage__c.field-meta.xml
<CustomField>
    <fullName>FamilyStage__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Family Stage</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>