force-app/main/default/objects/PMHR_PokemonData__c/fields/PokedexNumber__c.field-meta.xml
<CustomField>
    <fullName>PokedexNumber__c</fullName>
    <defaultValue>&apos;000&apos;</defaultValue>
    <externalId>true</externalId>
    <label>Pokedex Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>