force-app/main/default/objects/PMHR_PokemonData__c/fields/PrimaryType__c.field-meta.xml
<CustomField>
    <fullName>PrimaryType__c</fullName>
    <label>Primary Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMHR_PokemonType</valueSetName>
    </valueSet>
</CustomField>