force-app/main/default/objects/PMHR_PokemonData__c/fields/RegionalVariant__c.field-meta.xml
<CustomField>
    <fullName>RegionalVariant__c</fullName>
    <label>Regional Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMHR_PokemonRegionalVariant</valueSetName>
    </valueSet>
</CustomField>