force-app/main/default/objects/PMHR_PokemonData__c/fields/SecondaryType__c.field-meta.xml
<CustomField>
    <fullName>SecondaryType__c</fullName>
    <label>Secondary Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMHR_PokemonType</valueSetName>
    </valueSet>
</CustomField>