force-app/main/default/objects/PMHR_PokemonData__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>TEXT(PrimaryType__c) &amp; IF(NOT(ISBLANK(TEXT(SecondaryType__c))), &apos;/&apos; &amp; TEXT(SecondaryType__c), &apos;&apos;)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>