force-app/main/default/objects/PMHR_PokemonData__c/fields/VariantName__c.field-meta.xml
<CustomField>
    <fullName>VariantName__c</fullName>
    <formula>TEXT(RegionalVariant__c) &amp; &apos; &apos; &amp; VariantOf__r.Name</formula>
    <label>Variant Name</label>
    <type>Text</type>
</CustomField>