force-app/main/default/objects/PMHR_PokemonData__c/fields/VariantOf__c.field-meta.xml
<CustomField>
    <fullName>VariantOf__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variant of</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PMHR_PokemonData__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Form</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PMHR_PokemonData__c</referenceTo>
    <relationshipLabel>Variants</relationshipLabel>
    <relationshipName>Variants</relationshipName>
    <type>Lookup</type>
</CustomField>