force-app/main/default/objects/PMHR_PokemonData__c/recordTypes/Form.recordType-meta.xml
<RecordType>
    <fullName>Form</fullName>
    <active>true</active>
    <description>Standard form of the Pokemon species</description>
    <label>Form</label>
</RecordType>