force-app/main/default/objects/PMHR_PokemonData__c/recordTypes/Variant.recordType-meta.xml
<RecordType>
    <fullName>Variant</fullName>
    <active>true</active>
    <description>Additional variant of Pokemon form, like Alolan or Galarian.</description>
    <label>Variant</label>
</RecordType>