force-app/main/default/objects/PMHR_PokemonData__c/validationRules/Not_Changable_Pokedex_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Changable_Pokedex_Number</fullName>
    <active>true</active>
    <description>Pokedex Number cannot be edited</description>
    <errorConditionFormula>AND(
 NOT(ISNEW()),
 ISCHANGED(PokedexNumber__c)
)</errorConditionFormula>
    <errorDisplayField>PokedexNumber__c</errorDisplayField>
    <errorMessage>Pokedex Number cannot be edited</errorMessage>
</ValidationRule>