force-app/main/default/objects/PMHR_PokemonData__c/validationRules/Standard_no_Allowed_for_Regional_Variant.validationRule-meta.xml
<ValidationRule>
    <fullName>Standard_no_Allowed_for_Regional_Variant</fullName>
    <active>true</active>
    <description>You cannot choose this value for this record.</description>
    <errorConditionFormula>ISPICKVAL(RegionalVariant__c, &apos;Standard&apos;)</errorConditionFormula>
    <errorDisplayField>RegionalVariant__c</errorDisplayField>
    <errorMessage>You cannot choose this value for this record.</errorMessage>
</ValidationRule>