force-app/main/default/objects/PMHR_PokemonData__c/listViews/Additional_Variants.listView-meta.xml
<ListView>
    <fullName>Additional_Variants</fullName>
    <columns>NAME</columns>
    <columns>VariantOf__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PMHR_PokemonData__c.Variant</value>
    </filters>
    <label>Additional Variants</label>
</ListView>