force-app/main/default/objects/PMHR_PokemonData__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PokedexNumber__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Family__c</columns>
    <columns>FamilyStage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PMHR_PokemonData__c.Form</value>
    </filters>
    <label>All</label>
</ListView>